--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
     <title>Dice Game</title>
   </head>
@@ -12,7 +13,7 @@
     <div class="btns">
         <button id="play-game">PLAY!</button>
         <button id="reset">RESET!</button>
-    </div>
-    <script src="./script.js"></script>
+    </div>     
+    <div id="scoreContainer"></div>  
   </body>
 </html>
